--- a/4.0 File Paths/Folder0/index.html
+++ b/4.0 File Paths/Folder0/index.html
@@ -4,8 +4,8 @@
 <h2>Cat:</h2>
 <img src="./Folder3/cat.png"alt="cat"/>
 <h2>Dog:</h2>
-<img  src="/4.0 File Paths/dog.png"alt="dog"/>
+<img  src="../dog.png"alt="dog"/>
 <h2>Fish:</h2>
-<img src="/4.0 File Paths/Folder1/fish.png"alt="fish"/>
+<img src="../Folder1/fish.png"alt="fish"/>
 <h2>Bird:</h2>
-<img src="/4.0 File Paths/Folder1/Folder2/bird.png"alt="bird"/>
+<img src="../Folder1/Folder2/bird.png"alt="bird"/>
